update page button

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 The GitHub page of FRC Team 293 SPIKE. This page contains web
                 projects such as documentation or web based tools.
             </p>
-            <a href="/teamscouting/">Team Scouting App (Not Ready for Use)</a>
+            <a href="/teamscouting/">Team Scouting App</a>
             <a href="/teamscouting/documentation/"
                 >Team Scouting App Documentation</a
             >
